@@ -60,7 +60,7 @@ class EnvContext(options: GwenOptions, scopes: ScopedDataStack) extends LazyLogg
   /** The current type of specification being interpreted. */
   var specType = SpecType.feature
   
-  /** Currently list of loaded meta (used to track and avoid duplicate meta loads). */
+  /** Current list of loaded meta (used to track and avoid duplicate meta loads). */
   var loadedMeta: List[File] = Nil  
   
   /** Provides access to the global feature scope. */
